--- a/client/nav.jade
+++ b/client/nav.jade
@@ -27,7 +27,7 @@ template(name='nav')
                             a.ui.button(href="/member/#{currentUser.username}/finance" class="{{isActiveRoute regex='member_finance'}}" title='credits')
                                 i.coins.grey.icon
                                 |{{int currentUser.credit}}
-                            a.ui.button(href="/member/#{currentUser.username}/info" class="{{isActiveRoute regex='member_profile'}}")
+                            a.ui.button(href="/member/#{currentUser.username}/info" class=member_nav_button_class title=member_nav_button_title)
                                 if currentUser.profile_image_id
                                     img.ui.avatar.inline.image(src="{{c.url currentUser.profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
                                 else
