current active handler stat working on homepage, v1 of converting bid calendar to rental_calendar, combining instant reservation with bids, separete date, hour, month , and session vars to decide view context

--- a/components/admin/global_stats.jade
+++ b/components/admin/global_stats.jade
@@ -43,8 +43,8 @@ template(name='global_stats')
                 small in payments
             .item #{product_count} 
                 small products
-            .item #{withdrawel_count}
-                small withdrawels
+            //- .item #{withdrawel_count}
+            //-     small withdrawels
             .item #{payment_count}
                 small payments
             .item #{reservation_count}
