--- a/client/fields.jade
+++ b/client/fields.jade
@@ -546,7 +546,7 @@ template(name='number_edit')
     //- +clear_value  
     div  
     .ui.input            
-        input.edit_number(type='number' min=min class=classes value=field_value placeholder=placeholder autocomplete="off")
+        input.edit_number(type='number' min=min max=max class=classes value=field_value placeholder=placeholder autocomplete="off")
             
             
 template(name='number_view')
